fixed footer spacing for small screens and fixed max width for small screen aside

--- a/src/styles/asideMenu.scss
+++ b/src/styles/asideMenu.scss
@@ -135,4 +135,8 @@ li[class*=' theme-doc-sidebar-item-'] {
 
 .navbar-sidebar {
   max-width: 400px;
+
+  .theme-doc-sidebar-menu {
+    max-width: 380px;
+  }
 }
